--- a/src/app/dashboard/changed-password/changed-password.component.html
+++ b/src/app/dashboard/changed-password/changed-password.component.html
@@ -1,48 +1,47 @@
 <app-loader>
 </app-loader>
-
-
 <div class="layout row ">
-    <div  class="header-form col-sm-11">
-        <h3 ><i class="fa fa-user" aria-hidden="true"></i> Change Password</h3>
-    </div>
-    <div class="col-sm-12 pd-20">
-        <form [formGroup]="register" class="profile ">
-            <mat-form-field>
-                <input matInput type="password" formControlName="old" placeholder="Current Password" [type]="passhide ? 'password' : 'text'" required>
-                <mat-icon matSuffix (click)="passhide = !passhide">{{passhide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                <mat-error *ngIf="register.controls.old.value == ''">
-                    <strong>Please provide current password</strong>
-                </mat-error>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput type="password" formControlName="password" placeholder="New Password" [type]="newpasshide ? 'password' : 'text'" required>
-                <mat-error *ngIf="register.controls.password.value == ''">
-                    <strong>Please provide new password</strong>
-                </mat-error>
-                <mat-icon matSuffix (click)="newpasshide = !newpasshide">{{newpasshide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                <mat-error *ngIf="register.controls.password.hasError('pattern')">
-                    <strong>At least one uppercase letter,one lowercase letter, one number & one special character</strong>
-                </mat-error>
-
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput type="password" formControlName="confirmPassword" placeholder="Confirm Password" [type]="confirmpasshide ? 'password' : 'text'" required>
-                <mat-icon matSuffix (click)="confirmpasshide = !confirmpasshide">{{confirmpasshide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                <mat-error *ngIf="(register.controls.confirmPassword.value != register.controls.password.value) && (register.controls.confirmPassword.value !='')">
-                    <strong>
-                                        Password does not match 
-                                    </strong>
-                </mat-error>
-                <mat-error *ngIf="(register.controls.confirmPassword.value =='')">
-                    <strong>
-                            Please provide confirm password
-                            </strong>
-                </mat-error>
-            </mat-form-field>
-            <div class="form-group updateButton" >
-                <button type="submit"  [disabled]="!register.valid || valid" class="btn btn-rose" (click)="changedPassword()">Update</button>
-            </div>
-        </form>
-    </div>
+  <div class="header-form col-sm-11">
+    <h3><i class="fa fa-key" aria-hidden="true"></i> Change Password</h3>
   </div>
+  <div class="col-sm-12 pd-20">
+    <form [formGroup]="register" class="profile ">
+      <mat-form-field>
+        <input matInput type="password" formControlName="old" placeholder="Current Password"
+          [type]="passhide ? 'password' : 'text'" required>
+        <i matSuffix (click)="hide = !hide" class=" {{hide ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
+        <mat-error *ngIf="register.controls.old.value == ''">
+          <strong>Please provide current password</strong>
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" formControlName="password" placeholder="New Password"
+          [type]="newpasshide ? 'password' : 'text'" required>
+        <mat-error *ngIf="register.controls.password.value == ''">
+          <strong>Please provide new password</strong>
+        </mat-error>
+        <i matSuffix (click)="hide = !hide" class=" {{hide ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
+        <mat-error *ngIf="register.controls.password.hasError('pattern')">
+          <strong>At least one uppercase letter,one lowercase letter, one number & one special character</strong>
+        </mat-error>
+
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" formControlName="confirmPassword" placeholder="Confirm Password"
+          [type]="confirmpasshide ? 'password' : 'text'" required>
+        <i matSuffix (click)="hide = !hide" class=" {{hide ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
+        <mat-error
+          *ngIf="(register.controls.confirmPassword.value != register.controls.password.value) && (register.controls.confirmPassword.value !='')">
+          <strong> Password does not match </strong>
+        </mat-error>
+        <mat-error *ngIf="(register.controls.confirmPassword.value =='')">
+          <strong>Please provide confirm password</strong>
+        </mat-error>
+      </mat-form-field>
+      <div class="form-group updateButton">
+        <button type="submit" [disabled]="!register.valid || valid" class="btn btn-rose"
+          (click)="changedPassword()">Update</button>
+      </div>
+    </form>
+  </div>
+</div>
