--- a/src/app/dashboard/forget-password/forget-password.component.html
+++ b/src/app/dashboard/forget-password/forget-password.component.html
@@ -9,7 +9,7 @@
                 <mat-error *ngIf="register.controls.password.value == ''">
                     <strong>Please provide new password</strong>
                 </mat-error>
-                <mat-icon matSuffix (click)="newpasshide = !newpasshide">{{newpasshide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                <i matSuffix (click)="hide = !hide" class=" {{hide ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
                 <mat-error *ngIf="register.controls.password.hasError('pattern')">
                     <strong>At least one uppercase letter,one lowercase letter, one number & one special character</strong>
                 </mat-error>
@@ -17,7 +17,7 @@
             </mat-form-field>
             <mat-form-field>
                 <input matInput type="password" formControlName="confirmPassword" placeholder="Confirm Password" [type]="confirmpasshide ? 'password' : 'text'" required>
-                <mat-icon matSuffix (click)="confirmpasshide = !confirmpasshide">{{confirmpasshide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                <i matSuffix (click)="hide = !hide" class=" {{hide ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
                 <mat-error *ngIf="(register.controls.confirmPassword.value != register.controls.password.value) && (register.controls.confirmPassword.value !='')">
                     <strong>
                         Password does not match 
