--- a/src/app/dashboard/purchase-history/purchase-history.component.scss
+++ b/src/app/dashboard/purchase-history/purchase-history.component.scss
@@ -4,3 +4,16 @@
   margin: 0;
   color: #fff;
 }
+.no_save_card{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 200px;
+}
+.no_save_card span{
+  font-size: 18px;
+  font-weight: 600;
+}
+.no_save_card span a{
+  color: #337ab7;
+}
