--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -55,7 +55,7 @@
             <ul class="nav-vanders  why-rfp-sublist">
               <li>
                 <a routerLink="/profile">
-                  <i class="fa fa-pencil"></i> <span >Profile</span></a>
+                  <i class="fa fa-user"></i> <span >Profile</span></a>
               </li>
               <li>
                 <a routerLink="/subscription">
