--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,34 +7,33 @@
               </li>
                 <li>
                     <a routerLink="/profile" routerLinkActive="active-route">
-                        <i class="fa fa-pencil"></i>Edit Profile</a>
+                        <i class="fa fa-user"></i> Profile</a>
                 </li>
-
+                <li>
+                  <a routerLink="/subscription" routerLinkActive="active-route">
+                      <i class="material-icons">subscriptions </i>Subscription</a>
+              </li>
+              <li>
+                <a routerLink="/purchase-history" routerLinkActive="active-route">
+                    <i class="fa fa-history"></i>Purchase History</a>
+            </li>
+            <li>
+              <a routerLink="/payment" routerLinkActive="active-route">
+                  <i class="fa fa-money"></i>Payment Methods</a>
+          </li>
+          <li>
+            <a routerLink="/licensedetails" routerLinkActive="active-route">
+                <i class="fa fa-info" ></i>License Information</a>
+        </li>
+        <li>
+          <a (click)="downloads()">
+              <i class="fa fa-download"></i>Download</a>
+      </li>
                 <li>
                     <a routerLink="/change-password" routerLinkActive="active-route">
                         <i class="fa fa-key"></i>Change Password</a>
                 </li>
-                <li>
-                    <a routerLink="/subscription" routerLinkActive="active-route">
-                        <i class="material-icons">subscriptions </i>Subscription</a>
-                </li>
-
-                <li>
-                    <a routerLink="/payment" routerLinkActive="active-route">
-                        <i class="fa fa-money"></i>Payment Methods</a>
-                </li>
-                <li>
-                    <a routerLink="/purchase-history" routerLinkActive="active-route">
-                        <i class="fa fa-history"></i>Purchase History</a>
-                </li>
-                <li>
-                    <a routerLink="/licensedetails" routerLinkActive="active-route">
-                        <i class="fa fa-info" ></i>License Information</a>
-                </li>
-                <li>
-                    <a (click)="downloads()">
-                        <i class="fa fa-download"></i>Download</a>
-                </li>
+              
                 <li>
                     <a routerLink="/support" routerLinkActive="active-route">
                         <i class="fa fa-comment"></i>Support Center
