--- a/src/app/super-admin-panel/site-help-desk/search-site-query-dialog/search.query.dialog.html
+++ b/src/app/super-admin-panel/site-help-desk/search-site-query-dialog/search.query.dialog.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" class="reset-pass-palceholder">
     <div mat-dialog-content class="dialog-layout">
         <mat-form-field>
-            <input matInput formControlName="name" placeholder="Name">
+            <input matInput class="text_captilize" formControlName="name" placeholder="Name">
         </mat-form-field>
         <mat-form-field>
             <input matInput formControlName="email" placeholder="Email">
