--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -8,7 +8,7 @@
                       <div class="contactInputs">
                           <div class="col-lg-12 col-sm-12 col-md-12 ">
                               <mat-form-field>
-                                  <input matInput placeholder="Name" type="text" name="name" maxlength="100" formControlName="name" required>
+                                  <input matInput class="text_captilize" placeholder="Name" type="text" name="name" maxlength="100" formControlName="name" required>
                                   <mat-error *ngIf="form.controls.name.value == ''"><strong>Please provide your
                                           name</strong>
                                   </mat-error>
