--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="layout row">
-    <div  class="header-form col-sm-3">
+    <div  class="header-form col-md-3 col-sm-4 col-xs-12">
         <h3 ><i class="fa fa-user" aria-hidden="true"></i> Edit Profile</h3>
     </div>
     <div class="col-sm-12">
