--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,1 +1,173 @@
-.background{display:flex;flex-direction:column;justify-content:center;align-items:center;background-image:url(../../assets/images/Login.gif);background-repeat:no-repeat;background-size:cover;background-position:center}.mainCard{max-width:400px;width:100%;margin-top:30px}.mainCard .button{background-color:#000;border-radius:30px;padding:4px 15px;color:#fff;width:100%;font-size:24px;margin-top:15px;font-weight:700;box-shadow:0 14px 26px -12px rgba(0,0,0,.42),0 4px 23px 0 rgba(0,0,0,.12),0 8px 10px -5px rgba(0,0,0,.2)!important}.mainCard .button:hover{background-color:#c00!important;box-shadow:none!important;color:#fff}mat-form-field{font-size:20px;font-weight:600!important;color:#1f1c1c!important;font-family:Roboto,"Helvetica Neue",sans-serif}.inputFields{display:flex;flex-direction:column;margin:30px 0 0;position:relative;top:-22px}.error{color:#f44336;font-weight:700;text-align:center;font-size:18px;margin:4px 0 0 0}span{font-size:13px}mat-icon{color:#4d4747;cursor:pointer}label{color:#007dff!important;font-weight:600;transition:none;font-size:16px;text-align:center}.sign-up:hover{color:#c00!important}label:hover{text-decoration:underline;cursor:pointer}.stay{font-weight:700;color:#000;font-size:13px}a{color:#0c6fc0;font-size:16px;cursor:pointer;font-weight:600}a:hover{color:#c00}::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb{background-color:#000!important}::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar{background-color:#bfbfbf}#sign{font-weight:600}#sign-up{font-weight:600!important;color:#000;font-size:16px;margin-right:4px}.title{background-color:#0f0f0f;margin-top:-50px!important;border-radius:6px;padding:15px 0 15px 0}.error-block{font-size:12px}h3{font-size:26px!important;color:#fff;font-weight:700!important;text-align:center}.terms-privacy{text-align:center;margin-top:5px}.terms-privacy>a{font-size:13px;margin-left:5px;font-weight:400;text-align:center}.login-form{margin-top:20px}.fa{cursor:pointer}.stay-forgot{display:flex;flex-flow:row;justify-content:space-between;flex-wrap:wrap}.stay-forgot>.innerdiv{display:flex;flex-direction:column;align-items:flex-start}.noAcount{display:flex;flex-direction:row;justify-content:center;margin-top:15px}
+.background {
+  background-image: url(../../assets/images/Login.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center
+}
+
+.mainCard {
+  max-width: 400px;
+  width: 100%;
+  margin: 100px auto 20px;
+}
+
+.mainCard .button {
+  background-color: #000;
+  border-radius: 30px;
+  padding: 4px 15px;
+  color: #fff;
+  width: 100%;
+  font-size: 24px;
+  margin-top: 15px;
+  font-weight: 700;
+  box-shadow: 0 14px 26px -12px rgba(0, 0, 0, .42), 0 4px 23px 0 rgba(0, 0, 0, .12), 0 8px 10px -5px rgba(0, 0, 0, .2) !important
+}
+
+.mainCard .button:hover {
+  background-color: #c00 !important;
+  box-shadow: none !important;
+  color: #fff
+}
+
+mat-form-field {
+  font-size: 20px;
+  font-weight: 600 !important;
+  color: #1f1c1c !important;
+  font-family: Roboto, "Helvetica Neue", sans-serif
+}
+
+.inputFields {
+  display: flex;
+  flex-direction: column;
+  margin: 30px 0 0;
+  position: relative;
+  top: -22px
+}
+
+.error {
+  color: #f44336;
+  font-weight: 700;
+  text-align: center;
+  font-size: 18px;
+  margin: 4px 0 0 0
+}
+
+span {
+  font-size: 13px
+}
+
+mat-icon {
+  color: #4d4747;
+  cursor: pointer
+}
+
+label {
+  color: #007dff !important;
+  font-weight: 600;
+  transition: none;
+  font-size: 16px;
+  text-align: center
+}
+
+.sign-up:hover {
+  color: #c00 !important
+}
+
+label:hover {
+  text-decoration: underline;
+  cursor: pointer
+}
+
+.stay {
+  font-weight: 700;
+  color: #000;
+  font-size: 13px
+}
+
+a {
+  color: #0c6fc0;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 600
+}
+
+a:hover {
+  color: #c00
+}
+
+::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #000 !important
+}
+
+::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #bfbfbf
+}
+
+#sign {
+  font-weight: 600
+}
+
+#sign-up {
+  font-weight: 600 !important;
+  color: #000;
+  font-size: 16px;
+  margin-right: 4px
+}
+
+.title {
+  background-color: #0f0f0f;
+  margin-top: -50px !important;
+  border-radius: 6px;
+  padding: 15px 0 15px 0
+}
+
+.error-block {
+  font-size: 12px
+}
+
+h3 {
+  font-size: 26px !important;
+  color: #fff;
+  font-weight: 700 !important;
+  text-align: center
+}
+
+.terms-privacy {
+  text-align: center;
+  margin-top: 5px
+}
+
+.terms-privacy>a {
+  font-size: 13px;
+  margin-left: 5px;
+  font-weight: 400;
+  text-align: center
+}
+
+.login-form {
+  margin-top: 20px
+}
+
+.fa {
+  cursor: pointer
+}
+
+.stay-forgot {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  flex-wrap: wrap
+}
+
+.stay-forgot>.innerdiv {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start
+}
+
+.noAcount {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 15px
+}
