--- a/src/app/super-admin-panel/login/login.component.scss
+++ b/src/app/super-admin-panel/login/login.component.scss
@@ -11,7 +11,7 @@
     .mainCard {
         max-width: 400px;
         width: 100%;
-        margin-top: 30px;
+        margin: 30px 0 !important;
         .button {
             background-color: #000;
             border-radius: 30px;
