--- a/src/app/dashboard/customer-support/customer.support.html
+++ b/src/app/dashboard/customer-support/customer.support.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="tab-pane fade" id="Support_Center" role="tabpanel" aria-labelledby="profile-tab">
-    <!-- <div class="tickets">
+    <div class="tickets">
       <mat-card-header>
           <mat-card-title>Your Ticket Status</mat-card-title>
       </mat-card-header>
@@ -85,6 +85,6 @@
   
       </mat-card>
   
-  </div> -->
+  </div>
   </div>
 </div>
