--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -29,7 +29,7 @@
             <div class="single-pricing-2">
                 <div id="top-btn">
                   <!-- <a *ngIf="!check_login(); else pkg0" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Select Plan</a> -->
-                                      <a *ngIf="!check_login(); else pkg0" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Register Now</a>
+                                      <a *ngIf="!check_login(); else pkg0" [routerLink]="['/sign-up']" class="btn btn-rose" title="Subscribe Package">Register Now</a>
                     <ng-template #pkg0>
                         <a (click)=" firststep('0')" class="btn btn-rose" title="Select Plan">Buy Now</a>
                     </ng-template>
@@ -72,7 +72,7 @@
                 <div class="pricing2-button" style="margin-bottom:5px;">
                   <!-- <a *ngIf="!check_login(); else pkg0" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Select Plan</a> -->
                   
-                                      <a *ngIf="!check_login(); else pkg0" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Register Now</a>
+                                      <a *ngIf="!check_login(); else pkg0" [routerLink]="['/sign-up']" class="btn btn-rose" title="Subscribe Package">Register Now</a>
                     <ng-template #pkg0>
                         <a (click)=" firststep('0')" class="btn btn-rose" title="Select Plan">Buy Now</a>
                     </ng-template>
@@ -84,7 +84,7 @@
                 <div id="top-btn">
                   <!-- <a *ngIf="!check_login(); else pkg1" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Select Plan</a> -->
                   
-                                      <a *ngIf="!check_login(); else pkg1" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Register Now</a>
+                                      <a *ngIf="!check_login(); else pkg1" [routerLink]="['/sign-up']" class="btn btn-rose" title="Subscribe Package">Register Now</a>
                     <ng-template #pkg1>
                         <a (click)=" firststep('1')" class="btn btn-rose" title="Select Plan">Buy Now</a>
                     </ng-template>
@@ -125,7 +125,7 @@
                 <div class="pricing2-button">
                   <!-- <a *ngIf="!check_login(); else pkg1" [routerLink]="['/login/pricing/','buyProduct']" (click)="redirectToPricing()" class="btn btn-rose" title="Subscribe Package">Select Plan
                   </a> -->
-                  <a *ngIf="!check_login(); else pkg1" [routerLink]="['/login/pricing/','buyProduct']" (click)="redirectToPricing()" class="btn btn-rose" title="Subscribe Package">Register Now
+                  <a *ngIf="!check_login(); else pkg1" [routerLink]="['/sign-up']"  class="btn btn-rose" title="Subscribe Package">Register Now
                   </a>
                     <ng-template #pkg1>
                         <a (click)=" firststep('1')" class="btn btn-rose" title="Select Plan">Buy Now</a>
@@ -138,7 +138,7 @@
                 <div id="top-btn">
                   <!-- <a *ngIf="!check_login(); else pkg4" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Select Plan</a> -->
 
-                    <a *ngIf="!check_login(); else pkg4" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Register Now
+                    <a *ngIf="!check_login(); else pkg4" [routerLink]="['/sign-up']" class="btn btn-rose" title="Subscribe Package">Register Now
                     </a>
                     <ng-template #pkg4>
                         <a (click)=" firststep('12')" class="btn btn-rose" title="Select Plan">Buy Now</a>
@@ -180,7 +180,7 @@
                 </mat-list>
                 <div class="pricing2-button">
                   <!-- <a *ngIf="!check_login(); else pkg4" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Select Plan</a> -->
-                                      <a *ngIf="!check_login(); else pkg4" [routerLink]="['/login/pricing/','buyProduct']" class="btn btn-rose" title="Subscribe Package">Register Now</a>
+                                      <a *ngIf="!check_login(); else pkg4" [routerLink]="['/sign-up']" class="btn btn-rose" title="Subscribe Package">Register Now</a>
                     <ng-template #pkg4>
                         <a (click)=" firststep('12')" class="btn btn-rose" title="Select Plan">Buy Now</a>
                     </ng-template>
