--- a/src/app/dashboard/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="layout row">
-    <div  class="header-form col-md-3 col-sm-4 col-xs-12">
-        <h3 ><i class="fa fa-user" aria-hidden="true"></i> Edit Profile</h3>
+    <div  class="header-form profile">
+        <h3 ><i class="fa fa-user" aria-hidden="true"></i> Profile</h3>
     </div>
     <div class="col-sm-12">
         <form autocomplete="off" [formGroup]="register" class="profile ">
