--- a/src/app/pricing/pricingsteps.component.scss
+++ b/src/app/pricing/pricingsteps.component.scss
@@ -466,9 +466,7 @@ input:checked+.slider {
   margin-top: 100px;
   margin-bottom: 3px
 }
-.spanss {
-    margin: 20px 0;
-}
+
 .stay {
   color: #333;
   font-weight: 500!important;
@@ -499,7 +497,9 @@ input:checked+.slider {
   font-weight: 500;
 
 }
-
+.spanss{
+  margin: 20px 0;
+}
 input:focus+.slider {
   box-shadow: 0 0 1px #cd0000
 }
@@ -565,9 +565,7 @@ input:checked+.slider:before {
 .selected-plan {
   background-color: #fff;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-  display: block;
-  max-width: 300px;
-  min-width: 300px;
+  display: block
 }
 
 .layout {
@@ -590,7 +588,6 @@ input:checked+.slider:before {
   position: relative;
   width: 50%
 }
-
 .payment-row.zip>div p {
   font-size: 11px;
   position: absolute;
@@ -600,7 +597,6 @@ input:checked+.slider:before {
   margin: 0;
   left: 8px
 }
-
 .button-row {
   display: flex;
   flex-direction: column;
@@ -1241,9 +1237,6 @@ mat-list-item {
   padding: 20px;
   margin: 0 auto;
   min-height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 .plans span{
   color: #282828;
