--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -189,15 +189,11 @@
         </div>
         <!-- </div> -->
     </div>
-
 </section>
 <div *ngIf="pkgsub" data-wow-delay=".5s">
-
-    <div class="row planSelect">
-     
+    <div class=" planSelect">
           <div class=" selected-plan">
               <div class="single-pricings ">
-          
                 <span class="plans text-center">
                   <span *ngIf="plan=='12'"> Yearly Plan </span>
                   <span *ngIf="plan=='1'"> Monthly Plan </span>
